--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "react-portfolio",
-  "homepage": "http://<conleyannmarie>.github.io/react-portfolio",
+  "homepage": "http://conleyannmarie.github.io/react-portfolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,8 +39,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^11.2.7",
-    "gh-pages": "^3.2.3"
+    "@testing-library/jest-dom": "^5.8.0",
+    "@testing-library/react": "^9.5.0",
+    "gh-pages": "^3.0.0"
   }
 }
